--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -7,8 +7,10 @@
     <div class="row card-panel">
         <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
             <div class="row">
-                <div class="input-field col s12">
+                <div class="col s1">
                     <i class="fas fa-user-circle prefix"></i>
+                </div>
+                <div class="input-field col s10">
                     <select id="category_name" name="category_name" class="validate" required>
                         <option value="" disabled selected>Which category does your recipe belong to?</option>
                         {% for category in categories %}
@@ -17,87 +19,97 @@
                     </select>
                     <label for="category_name"></label>
                 </div>
+                <div class="col s1"></div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
+                <div class="col s1">
                     <i class="fas fa-user-circle prefix"></i>
+                </div>
+                <div class="input-field col s10">
                     <input id="recipe_name" name="recipe_name" type="text" class="validate">
                     <label for="recipe_name">recipe name</label>
                 </div>
+                <div class="col s1"></div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
+                <div class="col s1">
                     <i class="fas fa-user-circle prefix"></i>
+                </div>
+                <div class="input-field col s10">
                     <input id="recipe_chef" name="recipe_chef" type="text" class="validate">
                     <label for="recipe_chef">recipe chef</label>
                 </div>
+                <div class="col s1"></div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
+                <div class="col s1">
                     <i class="fas fa-user-circle prefix"></i>
+                </div>
+                <div class="input-field col s10">
                     <input id="recipe_cookbook" name="recipe_cookbook" type="text" class="validate">
                     <label for="recipe_cookbook">recipe cookbook</label>
                 </div>
+                <div class="col s1"></div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
+                <div class="col s1">
                     <i class="fas fa-user-circle prefix"></i>
+                </div>
+                <div class="input-field col s10">
                     <input id="recipe_image" name="recipe_image" type="text" class="validate">
                     <label for="recipe_image">recipe image</label>
                 </div>
+                <div class="col s1"></div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
+                <div class="col s1">
                     <i class="fas fa-user-circle prefix"></i>
+                </div>
+                <div class="input-field col s10">
                     <input id="recipe_difficulty" name="recipe_difficulty" type="text" class="validate">
                     <label for="recipe_difficulty">recipe difficulty</label>
                 </div>
+                <div class="col s1"></div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
+                <div class="col s1">
                     <i class="fas fa-user-circle prefix"></i>
+                </div>
+                <div class="input-field col s10">
                     <input id="recipe_time" name="recipe_time" type="text" class="validate">
                     <label for="recipe_time">recipe time</label>
                 </div>
+                <div class="col s1"></div>
             </div>
             <div class="row">
-                <div class="col s12 m6">
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col s12">
-                                <label for="">Ingrdients</label>
-                            </div>
-                        </div>
-                        <div class="input_ing_wrap">
-                            <div class="row">
-                                <div class="col s12">
-                                    <button class="add_ing_button">Add</button>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col s12">
-                                    <div><input id="recipe_ingredients" name="recipe_ingredients" type="text"
-                                            class="validate"></div>
-                                </div>
-                            </div>
-                        </div>
+                <div class="col s1">
+                    <i class="fas fa-user-circle prefix"></i>
+                </div>
+                <div class="input-field col s10 input_ing_wrap">
+                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
+                    <label for="">Ingredients</label>
+                </div>
+                <div class="col s1">
+                    <button class="add_ing_button">Add</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s1">
+                    <i class="fas fa-user-circle prefix"></i>
+                </div>
+                <div class="input-field col s10 input_meth_wrap">
+                    <input type="text" id="recipe_method" name="recipe_method">
+                    <label for="recipe_method">recipe ingredients</label>
+                </div>
+                <div class="col s1">
+                    <button class="add_meth_button">Add
+                </div>
+
+                <div class="row">
+                    <div class="col s12 center-align">
+                        <button type="submit">add recipe</button>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12 input_meth_wrap">
-                    <div><i class="fas fa-user-circle prefix"></i>
-                        <input type="text" id="recipe_method" name="recipe_method">
-                        <label for="recipe_method">recipe ingredients</label>
-                        <button class="add_meth_button">Add step</button>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12 center-align">
-                    <button type="submit">add recipe</button>
-                </div>
-            </div>
         </form>
     </div>
 </div>
