added show_starters route

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -7,7 +7,7 @@
     <div class="row">
 
         <div class="col s12 m4 center-align">
-            <a href="{{ url_for('all_recipes') }}">
+            <a href="{{ url_for('show_starters') }}">
                 <div class="card small green lighten-2">
                     starters
                 </div>
