--- a/templates/categories.html
+++ b/templates/categories.html
@@ -14,14 +14,18 @@
             </a>
         </div>
         <div class="col s12 m4 center-align">
-            <div class="card small green lighten-2">
-                mains
-            </div>
+            <a href="{{ url_for('show_mains') }}">
+                <div class="card small green lighten-2">
+                    mains
+                </div>
+            </a>
         </div>
         <div class="col s12 m4 center-align">
-            <div class="card small green lighten-2">
-                desserts
-            </div>
+            <a href="{{ url_for('show_desserts') }}">
+                <div class="card small green lighten-2">
+                    desserts
+                </div>
+            </a>
         </div>
 
     </div>
@@ -29,19 +33,25 @@
     <div class="row">
 
         <div class="col s12 m4 center-align">
-            <div class="card small green lighten-2">
-                sides
-            </div>
+            <a href="{{ url_for('show_sides') }}">
+                <div class="card small green lighten-2">
+                    sides
+                </div>
+            </a>
         </div>
         <div class="col s12 m4 center-align">
-            <div class="card small green lighten-2">
-                cakes and biscuits
-            </div>
+            <a href="{{ url_for('show_cakes') }}">
+                <div class="card small green lighten-2">
+                    cakes and biscuits
+                </div>
+            </a>
         </div>
         <div class="col s12 m4 center-align">
-            <div class="card small green lighten-2">
-                drinks
-            </div>
+            <a href="{{ url_for('show_drinks') }}">
+                <div class="card small green lighten-2">
+                    drinks
+                </div>
+            </a>
         </div>
 
     </div>
