--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-hamburger"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('categories') }}">categories</a></li>
-                    <li><a href="{{ url_for('all_recipes') }}">recipes</a></li>
+                    <li><a href="#" class="dropdown-trigger" data-target="dropdown1">recipes</a></li>
                     <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
                     <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
                     <li><a href="{{ url_for('logout') }}">log out</a></li>
@@ -35,6 +35,17 @@
                 </ul>
             </div>
         </nav>
+
+        <ul id="dropdown1" class="dropdown-content">
+            <li><a href="{{ url_for('all_recipes') }}">all recipes</a></li>
+            <li class="divider"></li>
+            <li><a href="{{ url_for('show_starters') }}">starters</a></li>
+            <li><a href="{{ url_for('show_mains') }}">mains</a></li>
+            <li><a href="{{ url_for('show_desserts') }}">desserts</a></li>
+            <li><a href="{{ url_for('show_sides') }}">sides</a></li>
+            <li><a href="{{ url_for('show_cakes') }}">cakes and biscuits</a></li>
+            <li><a href="{{ url_for('show_drinks') }}">drinks</a></li>
+        </ul>
 
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('categories') }}">categories</a></li>
