--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('categories') }}">categories</a></li>
-            <li><a href="{{ url_for('all_recipes') }}">recipes</a></li>
+            <li><a href="#" class="dropdown-trigger" data-target="dropdown1">recipes</a></li>
             <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
             <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
             <li><a href="{{ url_for('logout') }}">log out</a></li>
