--- a/templates/base.html
+++ b/templates/base.html
@@ -19,22 +19,24 @@
 <body>
 
     <header>
-
-        <nav>
-            <div class="nav-wrapper">
-                <a href="{{ url_for('categories') }}" class="brand-logo">larder</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-hamburger"></i></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="{{ url_for('categories') }}">categories</a></li>
-                    <li><a href="#" class="dropdown-trigger" data-target="dropdown2">recipes</a></li>
-                    <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
-                    <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
-                    <li><a href="{{ url_for('logout') }}">log out</a></li>
-                    <li><a href="{{ url_for('login') }}">log in</a></li>
-                    <li><a href="{{ url_for('register') }}">register</a></li>
-                </ul>
-            </div>
-        </nav>
+        <div class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper">
+                    <a href="{{ url_for('categories') }}" class="brand-logo">larder</a>
+                    <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i
+                            class="fas fa-hamburger"></i></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="{{ url_for('categories') }}">categories</a></li>
+                        <li><a href="#" class="dropdown-trigger" data-target="dropdown2">recipes</a></li>
+                        <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
+                        <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
+                        <li><a href="{{ url_for('logout') }}">log out</a></li>
+                        <li><a href="{{ url_for('login') }}">log in</a></li>
+                        <li><a href="{{ url_for('register') }}">register</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
 
         <ul id="dropdown1" class="dropdown-content">
             <li><a href="{{ url_for('all_recipes') }}">all recipes</a></li>
@@ -67,7 +69,6 @@
             <li><a href="{{ url_for('login') }}">log in</a></li>
             <li><a href="{{ url_for('register') }}">register</a></li>
         </ul>
-
     </header>
 
     <section>
