--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         <div class="navbar-fixed">
             <nav>
                 <div class="nav-wrapper">
-                    <a href="{{ url_for('categories') }}" class="brand-logo">larder</a>
+                    <a href="{{ url_for('landing') }}" class="brand-logo">larder</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i
                             class="fas fa-hamburger"></i></a>
                     <ul class="right hide-on-med-and-down">
