--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,6 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h2 class="center-align">larder</h2>
+<div class="bg-container">
+    <div class="container">
+        <div class="row landing">
+
+            <div class="col s12 l6 center-align">
+                <h3>larder</h3>
+            </div>
+            <div class="col s12 l6 center-align">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos voluptatem non adipisci, deserunt minus
+                    ullam,
+                    dolor fugiat fugit quibusdam consectetur aperiam suscipit soluta qui sed, optio velit voluptates at?
+                    Officia!</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
