--- a/templates/categories.html
+++ b/templates/categories.html
@@ -28,7 +28,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image hover">
-                            <a href="{{url_for('show_mains') }}"><img src="/static/images/starter.jpg" alt=""></a>
+                            <a href="{{url_for('show_mains') }}"><img src="/static/images/mains.jpg" alt=""></a>
                             <a href="{{url_for('show_mains') }}"
                                 class="btn-floating halfway-fab waves-effect waves-light green"><i
                                     class="fas fa-plus"></i></a>
@@ -42,7 +42,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image hover">
-                            <a href="{{url_for('show_desserts') }}"><img src="/static/images/starter.jpg" alt=""></a>
+                            <a href="{{url_for('show_desserts') }}"><img src="/static/images/dessert.jpg" alt=""></a>
                             <a href="{{url_for('show_desserts') }}"
                                 class="btn-floating halfway-fab waves-effect waves-light green"><i
                                     class="fas fa-plus"></i></a>
@@ -60,7 +60,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image hover">
-                            <a href="{{url_for('show_sides') }}"><img src="/static/images/starter.jpg" alt=""></a>
+                            <a href="{{url_for('show_sides') }}"><img src="/static/images/sides.jpg" alt=""></a>
                             <a href="{{url_for('show_sides') }}"
                                 class="btn-floating halfway-fab waves-effect waves-light green"><i
                                     class="fas fa-plus"></i></a>
@@ -74,7 +74,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image hover">
-                            <a href="{{url_for('show_cakes') }}"><img src="/static/images/starter.jpg" alt=""></a>
+                            <a href="{{url_for('show_cakes') }}"><img src="/static/images/biscuits.jpg" alt=""></a>
                             <a href="{{url_for('show_cakes') }}"
                                 class="btn-floating halfway-fab waves-effect waves-light green"><i
                                     class="fas fa-plus"></i></a>
@@ -88,7 +88,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image hover">
-                            <a href="{{url_for('show_drinks') }}"><img src="/static/images/starter.jpg" alt=""></a>
+                            <a href="{{url_for('show_drinks') }}"><img src="/static/images/drink.jpg" alt=""></a>
                             <a href="{{url_for('show_drinks') }}"
                                 class="btn-floating halfway-fab waves-effect waves-light green"><i
                                     class="fas fa-plus"></i></a>
