--- a/templates/desserts.html
+++ b/templates/desserts.html
@@ -2,39 +2,43 @@
 {% block content %}
 
 <div class="container">
-    <h3>Desserts</h3>
-
     <div class="row">
-        {% for recipe in recipes %}
-        <div class="col s12 m3">
-            <div class="card ">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="{{ url_for('static', filename='images/glam.jpg') }}">
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">{{ recipe.recipe_name }}<i
-                            class="material-icons right"></i></span>
-                    <p><a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}">Full recipe...</a></p>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">{{ recipe.recipe_name }}<i
-                            class="material-icons right">close</i></span>
-                    <!-- will need to remove ingredients and method-->
-                    <p> Category: {{ recipe.category_name }}<br>
-                        Chef: {{ recipe.recipe_chef }}<br>
-                        Cookbook: {{ recipe.recipe_cookbook }}<br>
-                        Difficulty: {{ recipe.recipe_difficulty }}<br>
-                        Cooking Time: {{ recipe.recipe_time }}<br>
-                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-large green">edit</a>
-                        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large red">delete</a><br>
-                        <a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}">Full recipe...</a>
-                    </p>
+        <div class="col s12 xl3">
+
+            <h3 class="center-align">desserts</h3>
+        </div>
+        <div class="row">
+            {% for recipe in recipes %}
+            <div class="col s12 m3">
+                <div class="card ">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="{{ url_for('static', filename='images/glam.jpg') }}">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">{{ recipe.recipe_name }}<i
+                                class="material-icons right"></i></span>
+                        <p><a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}">Full recipe...</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">{{ recipe.recipe_name }}<i
+                                class="material-icons right">close</i></span>
+                        <!-- will need to remove ingredients and method-->
+                        <p> Category: {{ recipe.category_name }}<br>
+                            Chef: {{ recipe.recipe_chef }}<br>
+                            Cookbook: {{ recipe.recipe_cookbook }}<br>
+                            Difficulty: {{ recipe.recipe_difficulty }}<br>
+                            Cooking Time: {{ recipe.recipe_time }}<br>
+                            <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
+                                class="btn-large green">edit</a>
+                            <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
+                                class="btn-large red">delete</a><br>
+                            <a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}">Full recipe...</a>
+                        </p>
+                    </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
-</div>
 
-{% endblock%}
+    {% endblock%}
