--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -9,31 +9,34 @@
         </div>
         <div class="row">
             {% for recipe in recipes %}
-            <div class="col s12 m3">
+            <div class="col s12 l3">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="{{ url_for('static', filename='images/glam.jpg') }}">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">{{ recipe.recipe_name }}<i
+                        <span class="card-title activator" id="rec-style">{{ recipe.recipe_name }}<i
                                 class="material-icons right"></i></span>
                         <p><a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}">Full recipe...</a></p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">{{ recipe.recipe_name }}<i
-                                class="material-icons right">close</i></span>
+                        <span class="card-title" id="rec-style">{{ recipe.recipe_name }}<i
+                                class="far fa-times-circle right"></i></span>
                         <!-- will need to remove ingredients and method-->
-                        <p> Category: {{ recipe.category_name }}<br>
-                            Chef: {{ recipe.recipe_chef }}<br>
-                            Cookbook: {{ recipe.recipe_cookbook }}<br>
-                            Difficulty: {{ recipe.recipe_difficulty }}<br>
-                            Cooking Time: {{ recipe.recipe_time }}<br>
+                        <span>Category: {{ recipe.category_name }}</span><br>
+                        <span>Chef: {{ recipe.recipe_chef }}</span><br>
+                        <span>Cookbook: {{ recipe.recipe_cookbook }}</span><br>
+                        <span>Difficulty: {{ recipe.recipe_difficulty }}</span><br>
+                        <span>Cooking Time: {{ recipe.recipe_time }}</span>
+                        <div class="row center-align rec-card">
                             <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-                                class="btn-large green">edit</a>
+                                class="btn-large green waves-effect waves-light">edit</a>
                             <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                                class="btn-large red">delete</a><br>
+                                class="btn-large red waves-effect waves-light">delete</a><br>
+                        </div>
+                        <div>
                             <a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}">Full recipe...</a>
-                        </p>
+                        </div>
                     </div>
                 </div>
             </div>
