--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             {% for recipe in recipes %}
-            <div class="col s12 l3">
+            <div class="col s12 m3">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="{{ url_for('static', filename='images/glam.jpg') }}">
