--- a/templates/show_recipe.html
+++ b/templates/show_recipe.html
@@ -1,31 +1,40 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">Recipe</h3>
-
 <div class="container">
-    <p>Testing to see if this works</p>
-    {{ recipe.category_name }}<br>
-    {{ recipe.recipe_name }}<br>
-    {{ recipe.recipe_chef }}<br>
-    {{ recipe.recipe_cookbook }}<br>
-    <img src="{{ recipe.recipe_image }}" alt="{{recipe.recipe_name}}"><br>
-    {{ recipe.recipe_difficulty }}<br>
-    <h4>Ingredients</h4>
-    {% for ingredient in recipe.recipe_ingredients %}
-    <li>
-        {{ ingredient }}
-    </li>
-    {% endfor %}
-    <h4>Method</h4>
-    {% for step in recipe.recipe_method %}
-    <li>
-        {{ step }}
-    </li>
-    {% endfor %}
-    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-large green">edit</a>
-    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-large red">delete</a><br>
+    <div class="row">
+        <div class="col s12 xl4">
 
+            <h3 class="center-align">
+                <h3 class="center-align"> {{ recipe.recipe_name }} </h3>
+        </div>
+
+        <div class="row">
+            <div class="col s12 xl4">
+                <img src="{{ recipe.recipe_image }}" alt="{{recipe.recipe_name}}"><br>
+                <span>Category: {{ recipe.category_name }}</span><br>
+                <span>Chef: {{ recipe.recipe_chef }}</span><br>
+                <span>Cookbook: {{ recipe.recipe_cookbook }}</span><br>
+                <span>Difficulty: {{ recipe.recipe_difficulty }}</span><br>
+            </div>
+            <div class="col s12 xl4">
+                <h4>Ingredients</h4>
+                {% for ingredient in recipe.recipe_ingredients %}
+                <li>
+                    {{ ingredient }}
+                </li>
+                {% endfor %}
+                <h4>Method</h4>
+                {% for step in recipe.recipe_method %}
+                <li>
+                    {{ step }}
+                </li>
+                {% endfor %}
+                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-large green">edit</a>
+                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-large red">delete</a><br>
+            </div>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
