added spans and divs to show_recipe.html

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -12,7 +12,7 @@
             <div class="col s12 m3">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="{{ url_for('static', filename='images/glam.jpg') }}">
+                        <img class="activator" src="{{ recipe.recipe_image }}">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator" id="rec-style">{{ recipe.recipe_name }}<i
