--- a/templates/drinks.html
+++ b/templates/drinks.html
@@ -13,7 +13,7 @@
             <div class="col s12 m3">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="{{ url_for('static', filename='images/glam.jpg') }}">
+                        <img class="activator" src="{{ recipe.recipe_image }}">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">{{ recipe.recipe_name }}<i
