--- a/templates/show_recipe.html
+++ b/templates/show_recipe.html
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="col s12 xl4">
-                <img src="{{ recipe.recipe_image }}" alt="{{recipe.recipe_name}}"><br>
+                <img class="show-img" src="{{ recipe.recipe_image }}" alt="{{recipe.recipe_name}}"><br>
                 <div class="col s3">
                     <span class="left-align">Category: </span>
                 </div>
