added icons to add_recipe.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,3 +77,18 @@ nav .brand-logo {
 .card-image {
     height: 20em;
 }
+
+.fa-question-circle:before {
+    content: "\f059";
+    color: #2c642e;
+}
+
+#icon {
+    padding-top: 25px;
+}
+
+.icon-size {
+    height: 50px;
+    width: 50px;
+}
+
