--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -7,8 +7,8 @@
     <div class="row card-panel">
         <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
             <div class="row">
-                <div class="col s1">
-                    <i class="fas fa-user-circle prefix"></i>
+                <div class="col s1" id="icon">
+                    <i class="fas fa-question-circle icon-size"></i>
                 </div>
                 <div class="input-field col s10">
                     <select id="category_name" name="category_name" class="validate" required>
@@ -23,7 +23,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user-circle prefix"></i>
+                    <i class="fas fa-bread-slice" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_name" name="recipe_name" type="text" class="validate">
@@ -33,7 +33,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user-circle prefix"></i>
+                    <i class="fas fa-user" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_chef" name="recipe_chef" type="text" class="validate">
@@ -42,8 +42,8 @@
                 <div class="col s1"></div>
             </div>
             <div class="row">
-                <div class="col s1">
-                    <i class="fas fa-user-circle prefix"></i>
+                <div class="col s1" id="icon">
+                    <i class="fas fa-book"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_cookbook" name="recipe_cookbook" type="text" class="validate">
@@ -53,7 +53,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user-circle prefix"></i>
+                    <i class="fas fa-camera" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_image" name="recipe_image" type="text" class="validate">
@@ -63,7 +63,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user-circle prefix"></i>
+                    <i class="fas fa-user-cog" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_difficulty" name="recipe_difficulty" type="text" class="validate">
@@ -73,7 +73,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user-circle prefix"></i>
+                    <i class="fas fa-clock" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_time" name="recipe_time" type="text" class="validate">
@@ -83,7 +83,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user-circle prefix"></i>
+                    <i class="fas fa-list" id="icon"></i>
                 </div>
                 <div class="input-field col s10 input_ing_wrap">
                     <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
@@ -95,7 +95,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user-circle prefix"></i>
+                    <i class="fas fa-list" id="icon"></i>
                 </div>
                 <div class="input-field col s10 input_meth_wrap">
                     <input type="text" id="recipe_method" name="recipe_method">
