--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -7,6 +7,25 @@
 
             <h3 class="center-align">recipes</h3>
         </div>
+
+        <div class="row card-panel">
+            <form action="{{ url_for('search') }}" method="post" class="col s12">
+                <div class="row valign-wrapper center-align">
+                    <div class="input-field col s12 m8">
+                        <i class="fas fa-search prefix"></i>
+                        <input type="text" name="query " id="query" class="validate">
+                        <label for="query">search recipes</label>
+                    </div>
+                    <div class="col s12 m4">
+                        <a href="{{ url_for('all_recipes') }}" class="red btn">reset</a>
+                        <button type="submit">
+                            <i class="fas fa-search left"></i>search
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
         <div class="row">
             {% for recipe in recipes %}
             <div class="col s12 m3">
