limited user functionality if not logged in

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,11 +28,14 @@
                     <ul class="right hide-on-med-and-down">
                         <li><a href="{{ url_for('categories') }}">categories</a></li>
                         <li><a href="#" class="dropdown-trigger" data-target="dropdown2">recipes</a></li>
+                        {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
                         <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
                         <li><a href="{{ url_for('logout') }}">log out</a></li>
+                        {% else %}
                         <li><a href="{{ url_for('login') }}">log in</a></li>
                         <li><a href="{{ url_for('register') }}">register</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </nav>
