fixed typo in input name

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -14,8 +14,8 @@
             <div class="row valign-wrapper center-align">
                 <div class="input-field col s12">
                     <i class="fas fa-search prefix"></i>
-                    <input type="text" name="query " id="query" class="validate">
-                    <label for="query">search recipes</label>
+                    <input type="text" name="query" id="query" class="validate">
+                    <label for="query">search</label>
                 </div>
                 <div class="col s12 m4">
                     <button type="submit" class="btn green">
