--- a/templates/login.html
+++ b/templates/login.html
@@ -1,26 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">log in</h3>
 
-<div class="row">
-    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
-        <div class="row">
-            <div class="input-field col s6">
-                <i class="fas fa-user-cog prefix"></i>
-                <input id="username" name="username" type="text" class="validate">
-                <label for="username">username</label>
-            </div>
-            <div class="input-field col s6">
-                <i class="fas fa-user-lock prefix"></i>
-                <input id="password" name="password" type="password" class="validate">
-                <label for="password"></label>
-            </div>
-            <div class="row">
-                <button type="submit" class="col s12 btn-large">login</button>
-            </div>
+
+<div class="bg-container">
+    <div class="container">
+        <div class="row landing">
+            <h3 class="center-align">log in</h3>
+            <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="fas fa-user-cog prefix"></i>
+                        <input id="username" name="username" type="text" class="validate">
+                        <label for="username">username</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="fas fa-user-lock prefix"></i>
+                        <input id="password" name="password" type="password" class="validate">
+                        <label for="password"></label>
+                    </div>
+                </div>
+                <div class="row center-align">
+                    <button type="submit" class="btn btn-login">login</button>
+                </div>
         </div>
-    </form>
+    </div>
+</div>
+</form>
 </div>
 
 
