--- a/static/css/style.css
+++ b/static/css/style.css
@@ -88,7 +88,17 @@ nav .brand-logo {
 }
 
 .btn-login {
+    color: #2c642e;
+    background-color:white;
+}
+
+.btn-login:hover {
+    background-color: #9ad39c;
+}
+
+.btn-floating {
     background-color: #2c642e;
 }
+
 
 
