--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,4 +18,9 @@
     </div>
 </div>
 
+{% if session.user|lower == user.username|lower %}
+<a href="{{ url_for('edit_profile', username=user.username|lower) }}" class="btn-large green">edit</a>
+<a href="#" class="btn-large red">delete</a><br>
+{% endif %}
+
 {% endblock %}
