--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,7 +20,7 @@
 
 {% if session.user|lower == user.username|lower %}
 <a href="{{ url_for('edit_profile', username=user.username|lower) }}" class="btn-large green">edit</a>
-<a href="#" class="btn-large red">delete</a><br>
+<a href="{{ url_for('delete_profile', username=user.username|lower) }}" class="btn-large red">delete</a><br>
 {% endif %}
 
 {% endblock %}
